# hpccm-containers

./: LICENSE  README.md  pyproject.toml
src/hpccm_containers/: .update-recipe.sh.swp  __init__.py  building_blocks.py  template-hpccm.py  template.py  update-recipe.sh  utils.py
src/hpccm_containers/alphafold/: Singularity.alphafold  alphafold-hpccm.py  alphafold.py  run_alphafold.sh
src/hpccm_containers/anaconda/: Singularity.anaconda  anaconda.py
src/hpccm_containers/audacity/: audacity.py
src/hpccm_containers/auto07p/: auto07p.py
src/hpccm_containers/base/: base.py
src/hpccm_containers/biogrinder/: biogrinder.py
src/hpccm_containers/blender/: Singularity.blender  blender.py  blender.py.wip
src/hpccm_containers/caffe-unet/: caffe-unet.py
src/hpccm_containers/ccp-em/: ccp-em.py
src/hpccm_containers/cfdem/: Singularity.cfdem  cfdem.py
src/hpccm_containers/chimerax/: chimerax.py
src/hpccm_containers/cp2k/: Singularity.cp2k  cp2k.py
src/hpccm_containers/crisprdetect/: crisprdetect.py
src/hpccm_containers/cutruntools2/: cutruntools2
src/hpccm_containers/dristhi/: dristhi.py
src/hpccm_containers/dwarfs/: dwarfs.py
src/hpccm_containers/fastsurfer/: Singularity.fastsurfer  fastsurfer.py
src/hpccm_containers/fmriprep/: fmriprep.py  fmriprep.py.wip
src/hpccm_containers/fsl/: fsl.py
src/hpccm_containers/haystack_bio/: haystack_bio.py
src/hpccm_containers/jbrowse/: jbrowse.py
src/hpccm_containers/kraken2/: kraken2.py
src/hpccm_containers/libertem/: libertem.py
src/hpccm_containers/macs/: macs.py
src/hpccm_containers/mashtree/: recipe  (+2 more)
(+37 files in other folders)
